--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PortfolioProTeam</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="Script.js"></script>
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -18,53 +19,56 @@
             </ul>
         </nav>
     </header>
-
+    
     <!-- Introduction Section -->
     <section id="home">
+        <img src="" alt="group image">
         <h1>Welcome to Our Portfolio</h1>
         <p>We are a dynamic team of developers, designers, and creative thinkers passionate about turning ideas into reality. Our combined skills and diverse backgrounds allow us to deliver unique and effective solutions. Dive into our portfolio to discover our work, our passion, and the impact we aim to create.. Here is a showcase of our skills and projects.</p>
     </section>
 
-    <!-- Skills Section -->
-    <section id="skills">
-        <h2>Our Skills</h2>
-        <div class="skills-list">
-            <div class="skill">
-                <h3>HTML</h3>
-                <div class="progress-bar">
-                    <div class="progress" style="width: 90%;"></div>
-                </div>
+    <!-- Individual Skills Section -->
+    <section id="Individual-Skills">
+        <h2>Meet Each of Us</h2>
+        <div class="image-container">
+            <div class="image-item">
+                <img src="SRC.jpg" alt="Ayo's image">
+                <h3>Hi,my name is Adesanya Ayomide Felix</h3>
+                    <p>I build Web Applications</p>
+                    <p>I'm a Softwae Engineer specialized in crafting exceptional digital experiences.From implementing user interface to optimizing backend systems, I take pride in delivering top-notch software that exceeds expectations.a passionate developer with a love for creating dynamic and user-friendly websites. I specialize in front-end development and enjoy bringing creative ideas to life through code.</p>
             </div>
-            <div class="skill">
-                <h3>CSS</h3>
-                <div class="progress-bar">
-                    <div class="progress" style="width: 85%;"></div>
-                </div>
+            <div class="image-item">
+                <img src="image2.jpg" alt="Image 2">
+                <p>Caption for Image 2</p>
             </div>
-            <div class="skill">
-                <h3>JavaScript</h3>
-                <div class="progress-bar">
-                    <div class="progress" style="width: 75%;"></div>
-                </div>
+            <div class="image-item">
+                <img src="image3.jpg" alt="Image 3">
+                <p>Caption for Image 3</p>
+            </div>
+            <div class="image-item"></div>
+                <img src="image2.jpg" alt="Image 2">
+                <p>Caption for Image 2</p>
+            </div>
+            <div class="image-item"></div>
+                <img src="image2.jpg" alt="Image 2">
+                <p>Caption for Image 2</p>
+            </div>
+            <div class="image-item"></div>
+                <img src="image2.jpg" alt="Image 2">
+                <p>Caption for Image 2</p>
             </div>
         </div>
-    </section>
 
-    <!-- Projects Section -->
-    <section id="projects">
-        <h2>Our Projects</h2>
-        <div class="project-list">
-            <div class="project-item">
-                <img src="project1.jpg" alt="Project 1">
-                <h3>Project 1</h3>
-                <p>A brief description of Project 1.</p>
-            </div>
-            <div class="project-item">
-                <img src="project2.jpg" alt="Project 2">
-                <h3>Project 2</h3>
-                <p>A brief description of Project 2.</p>
-            </div>
-        </div>
+    </section>
+<!-- General Skill Section-->
+    <section id="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>HTML, CSS, JavaScript</li>
+            <li>React, Angular,</li>
+            <li>Node.js, Express</li>
+            <li>Python, Django</li>
+        </ul>
     </section>
 
     <!-- Contact Section -->
@@ -82,7 +86,5 @@
     <footer>
         <p>&copy; 2024 PortfolioProTeam. All rights reserved.</p>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
