--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="Script.js"></script>
 </head>
-<body>
+<body> 
     <!-- Navigation Bar -->
     <header>
         <nav>
@@ -38,23 +38,23 @@
                     <p>I'm a Softwae Engineer specialized in crafting exceptional digital experiences.From implementing user interface to optimizing backend systems, I take pride in delivering top-notch software that exceeds expectations.a passionate developer with a love for creating dynamic and user-friendly websites. I specialize in front-end development and enjoy bringing creative ideas to life through code.</p>
             </div>
             <div class="image-item">
-                <img src="image2.jpg" alt="Image 2">
+                <img src="Mubarak.jpg" alt="Mubarak's image">
                 <p>Caption for Image 2</p>
             </div>
             <div class="image-item">
-                <img src="image3.jpg" alt="Image 3">
+                <img src="Tomisin.jpg" alt="Tomisin's image">
                 <p>Caption for Image 3</p>
             </div>
             <div class="image-item"></div>
-                <img src="image2.jpg" alt="Image 2">
+                <img src="David.jpg" alt="David's image">
                 <p>Caption for Image 2</p>
             </div>
             <div class="image-item"></div>
-                <img src="image2.jpg" alt="Image 2">
+                <img src="Donnelli.jpg" alt="Donnelli's Image">
                 <p>Caption for Image 2</p>
             </div>
             <div class="image-item"></div>
-                <img src="image2.jpg" alt="Image 2">
+                <img src="Malcolm.jpg" alt="Malcolm's Image">
                 <p>Caption for Image 2</p>
             </div>
         </div>
