--- a/Index.html
+++ b/Index.html
@@ -1,66 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PortfolioProTeam</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="Script.js"></script>
+    <link rel="stylesheet" href="./styles.css">
+    <script src="./Script.js"></script>
 </head>
-<body> 
+
+<body>
     <!-- Navigation Bar -->
     <header>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
-    
+
     <!-- Introduction Section -->
     <section id="home">
-        <img src="" alt="group image">
+        <img src="./Images/Group.jpg" alt="group image">
         <h1>Welcome to Our Portfolio</h1>
-        <p>We are a dynamic team of developers, designers, and creative thinkers passionate about turning ideas into reality. Our combined skills and diverse backgrounds allow us to deliver unique and effective solutions. Dive into our portfolio to discover our work, our passion, and the impact we aim to create.. Here is a showcase of our skills and projects.</p>
+        <p>We are a dynamic team of developers, designers, and creative thinkers passionate about turning ideas into
+            reality. Our combined skills and diverse backgrounds allow us to deliver unique and effective solutions.
+            Dive into our portfolio to discover our work, our passion, and the impact we aim to create.. Here is a
+            showcase of our skills and projects.</p>
     </section>
 
     <!-- Individual Skills Section -->
     <section id="Individual-Skills">
         <h2>Meet Each of Us</h2>
+
         <div class="image-container">
-            <div class="image-item">
-                <img src="SRC.jpg" alt="Ayo's image">
-                <h3>Hi,my name is Adesanya Ayomide Felix</h3>
-                    <p>I build Web Applications</p>
-                    <p>I'm a Softwae Engineer specialized in crafting exceptional digital experiences.From implementing user interface to optimizing backend systems, I take pride in delivering top-notch software that exceeds expectations.a passionate developer with a love for creating dynamic and user-friendly websites. I specialize in front-end development and enjoy bringing creative ideas to life through code.</p>
+            <div class="image-sub-container">
+                <div class="image-item">
+                    <img src="./Images/SRC.jpg" alt="Ayo's image" class="">
+                    <h3>Hi,my name is Adesanya Ayomide Felix</h3>
+                    <p><strong>I build Web Applications</strong></p>
+                    <p>I'm a Softwae Engineer specialized in crafting exceptional digital experiences.From implementing
+                        user interface to optimizing backend systems, I take pride in delivering top-notch software that
+                        exceeds expectations.a passionate developer with a love for creating dynamic and user-friendly
+                        websites. I specialize in front-end development and enjoy bringing creative ideas to life
+                        through code.
+                    </p>
+                </div>
+
+                <div class="image-item">
+                    <img src="./Images/Mubarak.jpg" alt="Mubarak's image">
+                    <p><strong>I am Alimi Mubaraq Eyitayo</strong></p>
+                    <p>I'm a passionate computer science student, I am dedicated to exploring the vast opportunities in
+                        technology. With a strong foundation in programming languages, data structures, and software
+                        engineering, I aim to make a meaningful impact in the tech industry.
+                        My goal is to secure a role in a reputable tech company and to continuously develop my skills
+                        and knowledge in computer science.
+                    </p>
+                </div>
+
+                <div class="image-item">
+                    <img src="./Images/Tomisin.jpg" alt="Tomisin's image">
+                    <p><strong>Hi,I'am Olusanya Tomisin Mary</strong></p>
+                    <p>I'm a bright and ambitious student with a passion for technology. I am currently pursuing my
+                        academic dreams at the Federal College of Fisheries and Marine Technology, where I am studying
+                        Computer Science. My course in Computer Science has been a fascinating journey so far, and I am
+                        excited to explore the many opportunities that this field has to offer.
+                        My goal is to become a skilled computer scientist, capable of making a positive impact in my
+                        community and beyond. I am eager to learn from my experiences, both in and out of the classroom,
+                        and to use my knowledge and skills to make a difference in the world
+                    </p>
+                </div>
             </div>
-            <div class="image-item">
-                <img src="Mubarak.jpg" alt="Mubarak's image">
-                <p>Caption for Image 2</p>
-            </div>
-            <div class="image-item">
-                <img src="Tomisin.jpg" alt="Tomisin's image">
-                <p>Caption for Image 3</p>
-            </div>
-            <div class="image-item"></div>
-                <img src="David.jpg" alt="David's image">
-                <p>Caption for Image 2</p>
-            </div>
-            <div class="image-item"></div>
-                <img src="Donnelli.jpg" alt="Donnelli's Image">
-                <p>Caption for Image 2</p>
-            </div>
-            <div class="image-item"></div>
-                <img src="Malcolm.jpg" alt="Malcolm's Image">
-                <p>Caption for Image 2</p>
+
+
+            <div class="image-sub-container">
+                <div class="image-item">
+                    <img src="./Images/David.jpg" alt="David's image">
+                    <p><strong>Hi,I'am Akaya David Inung</strong></p>
+                    <p>
+                        I'm a passionate computer science student, I am dedicated to exploring the vast opportunities in
+                        technology. With a strong foundation in programming languages, and software engineering, I aim
+                        to make a meaningful impact in the tech industry.My goal is to secure a role in a reputable tech
+                        company and to continuously develop my skills and knowledge in computer science.
+                    </p>
+                </div>
+
+                <div class="image-item">
+
+                    <img src="./Images/Donnelli.jpg" alt="Donnelli's Image">
+                    <p><strong>My name is Achuonu Donelli</strong></p>
+                    <p>
+                        I am a passionate Graphic Designer dedicated to crafting exceptional digital experiences. From
+                        designing visually captivating user interfaces to creating cohesive brand aesthetics, I take
+                        pride in delivering top-notch designs that exceed expectations.Specializing in user-friendly
+                        website design, I love bringing creative ideas to life through visually compelling and
+                        functional designs. My goal is to merge creativity and usability, ensuring that every digital
+                        interaction leaves a lasting impression.
+                    </p>
+                </div>
+
+                <div class="image-item">
+                    <img src="./Images/Malcolm 2.jpg" alt="Malcolm's Image">
+                    <p><strong>Hi,I'm Kalaro Malcolm</strong></p>
+                    <p>
+                        Hello, I'm Kalaro Malcolm, a dedicated computer science student currently in ND 2. I am
+                        passionate about exploring the intricacies of programming and software development. My ambition
+                        is to become a successful programmer, adept at creating innovative solutions and contributing to
+                        the field of technology. I am committed to learning and growing in this dynamic field, aiming to
+                        make meaningful contributions through my skills and knowledge in computer science.
+                    </p>
+                </div>
             </div>
         </div>
-
     </section>
-<!-- General Skill Section-->
+    <!-- General Skill Section-->
     <section id="skills">
         <h2>Skills</h2>
         <ul>
@@ -87,4 +142,5 @@
         <p>&copy; 2024 PortfolioProTeam. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
