--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
 
     <!-- Introduction Section -->
     <section id="home">
-      <!-- <img src="./Images/Group.jpg" alt="group image"  /> -->
+      <img src="./Images/Group.jpg" alt="group-image" class="group-image" />
       <h1>Welcome to Our Portfolio</h1>
       <p>
         We are a dynamic team of developers, designers, and creative thinkers
@@ -132,8 +132,8 @@
         </div>
       </div>
     </section>
-    <!-- General Skill Section-->
 
+    <!-- General Skill Section-->
     <section id="skills">
       <h2>Skills</h2>
       <ul class="skills-list">
