--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
 
     <!-- Introduction Section -->
     <section id="home">
-      <img src="./Images/Group.jpg" alt="group-image" class="group-image" />
+      <img src="./Images/Group image .jpg" alt="group-image" class="group-image" />
       <h1>Welcome to Our Portfolio</h1>
       <p>
         We are a dynamic team of developers, designers, and creative thinkers
